--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <div class="slides">
         <section>
            <h1>Let's (learn) Go</h1>
+           <a href="http://www.flickr.com/photos/yukop/6779040884/"><img src="images/go_coffe.jpg" alt="go coffe" title="Go Logo"></a>
         </section>
       </div>
     </div>
