--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
            <h1>Let's (learn) Go</h1>
            <a href="http://www.flickr.com/photos/yukop/6779040884/"><img src="images/go_coffe.jpg" alt="go coffe" title="Go Logo"></a>
         </section>
+        <section>
+          <section>
+            <h1>What is Go ?</h1>
+          </section>
+          <section>
+          </section>
+        </section>
       </div>
     </div>
 		<script src="res/lib/js/head.min.js"></script>
