Worked on slide 2

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         </section>
         <section>
           <section>
-            <h1>What is Go ?</h1>
+            <h1>(And) What is Go... ?</h1>
+            <a href="https://en.wikipedia.org/wiki/File:Citizen_G%27kar.JPG"><img src="images/gkar.jpg" alt="G'kar"></a>
+            <br>
+            <small>Andreas Katsulas R.I.P</small>
           </section>
           <section>
           </section>
