Added the 3rd slide

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
             <small>Andreas Katsulas R.I.P</small>
           </section>
           <section>
+            <ul>
+              <li>Statically compiled programming language</li>
+              <li>Cross Platform</li>
+              <li>Strong type language</li>
+              <li>Garbage collection based</li>
+              <li>Objected Oriented based on Struct Properties</li>
+              <li>Influenced by many programming languages such as C</li>
+              <li class="fragment">And Pascal<br><img src="images/elephant_in_room_800_clr_6740.png" alt="elephant in a room"></li>
+            </ul>
           </section>
         </section>
       </div>
