--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
               <li>Strong type language</li>
               <li>Garbage collection based</li>
               <li>Objected Oriented based on Struct Properties</li>
-              <li>Influenced by many programming languages such as C</li>
-              <li class="fragment">And Pascal<br><img src="images/elephant_in_room_800_clr_6740.png" alt="elephant in a room"></li>
+              <li>Support Concurrent computing development</li>
+              <li>Influenced by many programming languages such as C ...</li>
+              <li class="fragment">... and <strong>Pascal</strong><br><img src="images/elephant_in_room_800_clr_6740.png" alt="elephant in a room"></li>
             </ul>
           </section>
         </section>
