--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
               <li class="fragment">... and <strong>Pascal</strong><br><img src="images/elephant_in_room_800_clr_6740.png" alt="elephant in a room"></li>
             </ul>
           </section>
+          <section>
+            <h1>Ah yes</h1>
+            <h1>But what is the ...</h1>
+            <h1>and what is Go</h1>
+          </section>
         </section>
       </div>
     </div>
