Working on slide 5

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             <h1>and what is Go</h1>
           </section>
         </section>
+        <section>
+          <section>
+          </section>
+        </section>
       </div>
     </div>
 		<script src="res/lib/js/head.min.js"></script>
