--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="res/css/reveal.min.css">
-		<link rel="stylesheet" href="res/css/theme/default.css" id="theme">
+    <link rel="stylesheet" href="res/css/theme/night.css" id="theme">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="res/lib/css/zenburn.css">
@@ -19,7 +19,7 @@
 		<script src="res/lib/js/html5shiv.js"></script>
 		<![endif]-->
 	</head>
-  <body>
+  <body class="reveal tileflip">
     <div class="reveal">
       <div class="slides">
         <section>
