--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
         <section>
           <section>
-            Basic Code:
+            <h2>Basic Code</h2>
             <pre><code data-trim contenteditable class="go">
 // We use packages to make order
 package main
@@ -70,13 +70,15 @@ func main() {
   fmt.Println("Hello, World")
 }
             </code></pre>
-            Output:
-            <pre><code data-trim contenteditable>
+            <br><h2>Output</h2>
+            <pre><code data-trim contenteditable class="bash">
 $ go build hello.go
 $ ./hello
 Hello, World
 $
 </code></pre>
+          </section>
+          <section>
           </section>
         </section>
       </div>
