--- a/index.html
+++ b/index.html
@@ -79,6 +79,41 @@ $
 </code></pre>
           </section>
           <section>
+            <h2>Variables</h2>
+            <pre><code data-trim contenteditable class="go">...
+// predefine variable
+var (
+     var1 int
+     var2, var3 string
+    )
+
+var1 = SomeFunction()
+
+// variable on usage
+var2 := SimeFunction()
+
+// array -> predefined as 0
+arr  := [10]int{}
+// array with values
+arr2 := [2]string{"go", "lang"}
+// compiler compute
+fibonacci := [...]int{1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144}
+</code></pre>
+<pre><code data-trim contenteditable class="go">
+// slices are cool 
+scifi := []string{"babylon 5", "star trek", "doctor who"}
+
+// maps (hash/associative array)
+doctor_colors := map[string]string{"rose" : "blonde", "tardis" : "blue", "pond" : "ginger"}
+
+// multiple value
+answer, err := funcWithError()
+
+// Ignore the error return
+answer, _  = functionWithError()
+...</code></pre>
+          </section>
+          <section>
           </section>
         </section>
       </div>
