--- a/index.html
+++ b/index.html
@@ -172,8 +172,19 @@ func main() {
           <section>
             <h2>Struct</h2>
             <pre><code data-trim contenteditable class="go">
-
+type TV_Show struct {
+   name    string // Show name
+   genre   string // Show genre
+   channel int    // Channel on TV
+   air     int64  // timestamp when it will be aired
+   rerun   bool   // is it a re-run ?
+   season  string // number of season
+   episode string // number of episode
+}
 </code></pre>
+          </section>
+          <section>
+            <h2>Unofficial OOP</h2>
           </section>
         </section>
       </div>
