--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ Star Trek - The next generation - S(Pilot) E(1b)
         <section>
           <section>
             <h1>Basic Flows</h1>
+            <a href="http://commons.wikimedia.org/wiki/File:Water_flows_over_dam_on_the_Waren_Burn_at_Twizell_Mill_-_geograph.org.uk_-_780768.jpg"><img src="images/flows.jpg" alt="water flow"></a>
           </section>
         </section>
       </div>
