--- a/index.html
+++ b/index.html
@@ -211,6 +211,21 @@ Star Trek - The next generation - S(Pilot) E(1b)
             <h1>Basic Flows</h1>
             <a href="http://commons.wikimedia.org/wiki/File:Water_flows_over_dam_on_the_Waren_Burn_at_Twizell_Mill_-_geograph.org.uk_-_780768.jpg"><img src="images/flows.jpg" alt="water flow"></a>
           </section>
+          <section>
+            <h2>Parallel and Concurrency </h2>
+            <br>
+            <ul>
+              <li class="fragment">Setting code to execute in parallel, without touching threads or processes</li>
+              <li class="fragment">Create more then one execution at "the same time"</li>
+              <li class="fragment">Wait for tasks if needed</li>
+              <li class="fragment">Measure tasks execution time</li>
+            </ul>
+            <br><br><br>
+            <span class="fragment"><strong>go</strong> with <strong>channels</strong>
+              <br><br>
+              <a href="http://commons.wikimedia.org/wiki/File:Generic-remote-control-shallow-focus.jpg"><img src="images/remote_control.jpg" alt="remote control"></a>
+            </span>
+          </section>
         </section>
       </div>
     </div>
