--- a/index.html
+++ b/index.html
@@ -226,6 +226,44 @@ Star Trek - The next generation - S(Pilot) E(1b)
               <a href="http://commons.wikimedia.org/wiki/File:Generic-remote-control-shallow-focus.jpg"><img src="images/remote_control.jpg" alt="remote control"></a>
             </span>
           </section>
+          <section>
+            <h2>Concurrency</h2>
+            <pre><code data-trim contenteditable class="go">
+package main
+
+import (
+    "fmt"
+    "time"
+)
+
+func say(s string) {
+    for i := 0; i < 5; i++ {
+        time.Sleep(100 * time.Millisecond)
+        fmt.Println(s)
+    }
+}
+
+func main() {
+    go say("world")
+    say("hello")
+}
+            </code></pre>
+            Output:
+            <pre><code data-trim contenteditable class="no-highlight">
+hello
+world
+hello
+world
+hello
+world
+hello
+world
+hello
+            </code></pre>
+          </section>
+          <section>
+               
+          </section>
         </section>
       </div>
     </div>
