--- a/index.html
+++ b/index.html
@@ -262,7 +262,34 @@ hello
             </code></pre>
           </section>
           <section>
-               
+            <h2>Channels</h2>
+            <pre><code data-trim contenteditable class="go">
+package main
+import "fmt"
+
+func sum(a []int, c chan int) {
+    sum := 0
+    for _, v := range a {
+        sum += v
+    }
+    c <- sum // send sum to c
+}
+
+func main() {
+    a := []int{7, 2, 8, -9, 4, 0}
+    c := make(chan int)
+    go sum(a[:len(a)/2], c)
+    go sum(a[len(a)/2:], c)
+    x, y := <-c, <-c // receive from c
+
+    fmt.Println(x, y, x+y)
+}               
+            </code></pre>
+          
+            Output:
+            <pre><code data-trim contenteditable class="no-highlight">
+17 -5 12
+            </code></pre>
           </section>
         </section>
       </div>
