--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ func sum(a []int, c chan int) {
     for _, v := range a {
         sum += v
     }
-    c <- sum // send sum to c
+    c &lt;- sum // send sum to c
 }
 
 func main() {
@@ -280,7 +280,7 @@ func main() {
     c := make(chan int)
     go sum(a[:len(a)/2], c)
     go sum(a[len(a)/2:], c)
-    x, y := <-c, <-c // receive from c
+    x, y := &lt;-c, &lt;-c // receive from c
 
     fmt.Println(x, y, x+y)
 }               
@@ -299,10 +299,10 @@ import "fmt"
 
 func main() {
     c := make(chan int, 2)
-    c <- 1
-    c <- 2
-    fmt.Println(<-c)
-    fmt.Println(<-c)
+    c &lt;- 1
+    c &lt;- 2
+    fmt.Println(&lt;-c)
+    fmt.Println(&lt;-c)
 }
             </code></pre>
             Output:
@@ -318,9 +318,9 @@ func fibonacci(c, quit chan int) {
     x, y := 0, 1
     for {
         select {
-        case c <- x:
+        case c &lt;- x:
             x, y = y, x+y
-        case <-quit:
+        case &lt;-quit:
             fmt.Println("quit")
             return
         }
@@ -333,9 +333,9 @@ func main() {
     quit := make(chan int)
     go func() {
         for i := 0; i < 10; i++ {
-            fmt.Println(<-c)
+            fmt.Println(&lt;-c)
         }
-        quit <- 0
+        quit &lt;- 0
     }()
     fibonacci(c, quit)
 }
@@ -353,6 +353,13 @@ func main() {
 34
 quit
             </code></pre>
+          </section>
+        </section>
+        <section>
+          <section>
+            <h2>Anyone still alive here ?</h2>
+            <a href="http://commons.wikimedia.org/wiki/File:Pictofigo_-_Idea.png">
+            <img src="images/idea.png" alt="idea"></a>
           </section>
         </section>
       </div>
