--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <div class="slides">
         <section>
            <h1>Let's (learn) Go</h1>
-           <a href="http://www.flickr.com/photos/yukop/6779040884/"><img src="images/go_coffe.jpg" alt="go coffe" title="Go Logo"></a>
+           <a href="http://www.flickr.com/photos/yukop/6779040884/"><img src="images/go_coffe.jpg" alt="go coffe" title="Go Logo"></a><br>
+           <a href="http://creativecommons.org/licenses/by-sa/3.0/"><img src="images/cc-by-sa-88x31.png" alt="cc-by"></a>
         </section>
         <section>
           <section>
